Horizontal scroll on PC fixed

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -26,6 +26,7 @@ body {
   font-size: 18px;
   color: $dark-blue;
 
+  overflow-x: hidden;
 
 }
 
